@@ -760,6 +760,86 @@ or no dimensions at all.</p>
 <div class="math notranslate nohighlight">
 \[c = \frac{\sigma N_{A}}{10^{-3}M_{air}}\]</div>
 </li>
+<li><p class="first">column number density from column volume mixing ratio</p>
+<table border="1" class="docutils">
+<colgroup>
+<col width="12%" />
+<col width="33%" />
+<col width="20%" />
+<col width="34%" />
+</colgroup>
+<thead valign="bottom">
+<tr class="row-odd"><th class="head">symbol</th>
+<th class="head">description</th>
+<th class="head">unit</th>
+<th class="head">variable name</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr class="row-even"><td><span class="math notranslate nohighlight">\(c\)</span></td>
+<td>total column number density of total air</td>
+<td><span class="math notranslate nohighlight">\(\frac{molec}{m^2}\)</span></td>
+<td><cite>column_number_density {:}</cite></td>
+</tr>
+<tr class="row-odd"><td><span class="math notranslate nohighlight">\(c_{x}\)</span></td>
+<td>total column number density of air
+component x (e.g. <span class="math notranslate nohighlight">\(c_{O_{3}}\)</span>)</td>
+<td><span class="math notranslate nohighlight">\(\frac{molec}{m^2}\)</span></td>
+<td><cite>&lt;species&gt;_column_number_density {:}</cite></td>
+</tr>
+<tr class="row-even"><td><span class="math notranslate nohighlight">\(\nu_{x}\)</span></td>
+<td>column volume mixing ratio of
+quantity x with regard to total air</td>
+<td><span class="math notranslate nohighlight">\(ppv\)</span></td>
+<td><cite>&lt;species&gt;_column_volume_mixing_ratio {:}</cite></td>
+</tr>
+</tbody>
+</table>
+<p>The pattern <cite>:</cite> for the dimensions can represent <cite>{latitude,longitude}</cite>, <cite>{time}</cite>, <cite>{time,latitude,longitude}</cite>,
+or no dimensions at all.</p>
+<div class="math notranslate nohighlight">
+\[c_{x} = \nu_{x}c\]</div>
+</li>
+<li><p class="first">column number density from column volume mixing ratio dry air</p>
+<table border="1" class="docutils">
+<colgroup>
+<col width="16%" />
+<col width="28%" />
+<col width="19%" />
+<col width="37%" />
+</colgroup>
+<thead valign="bottom">
+<tr class="row-odd"><th class="head">symbol</th>
+<th class="head">description</th>
+<th class="head">unit</th>
+<th class="head">variable name</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr class="row-even"><td><span class="math notranslate nohighlight">\(c_{dry\_air}\)</span></td>
+<td>total column number density of dry air</td>
+<td><span class="math notranslate nohighlight">\(\frac{molec}{m^2}\)</span></td>
+<td><cite>dry_air_column_number_density {:}</cite></td>
+</tr>
+<tr class="row-odd"><td><span class="math notranslate nohighlight">\(c_{x}\)</span></td>
+<td>total column number density of air
+component x (e.g. <span class="math notranslate nohighlight">\(c_{O_{3}}\)</span>)</td>
+<td><span class="math notranslate nohighlight">\(\frac{molec}{m^2}\)</span></td>
+<td><cite>&lt;species&gt;_column_number_density {:}</cite></td>
+</tr>
+<tr class="row-even"><td><span class="math notranslate nohighlight">\(\bar{\nu}_{x}\)</span></td>
+<td>column volume mixing ratio of
+quantity x with regard to dry air</td>
+<td><span class="math notranslate nohighlight">\(ppv\)</span></td>
+<td><cite>&lt;species&gt;_column_volume_mixing_ratio_dry_air {:}</cite></td>
+</tr>
+</tbody>
+</table>
+<p>The pattern <cite>:</cite> for the dimensions can represent <cite>{latitude,longitude}</cite>, <cite>{time}</cite>, <cite>{time,latitude,longitude}</cite>,
+or no dimensions at all.</p>
+<div class="math notranslate nohighlight">
+\[c_{x} = \bar{\nu}_{x}c_{dry\_air}\]</div>
+</li>
 <li><p class="first">column number density of air component from volume mixing ratio:</p>
 <table border="1" class="docutils">
 <colgroup>
